[package]
name = "gears_ffi"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "gears_ffi"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.18"

[dependencies]
neon = "0.1.18"
gears = "0.1.5"

[replace]
# "gears:0.1.1" = { path = "/home/michiel/dev/github/gears-core-rust" }
"gears:0.1.5" = { git = 'https://github.com/gears-project/gears-core-rust' }
